--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = mongodb+srv://Admin:Admin00@cluster0.xooqe.mongodb.net/<dbname>?retryWrites=true&w=majority
+MONGODB_URI = mongodb+srv://Admin:Admin00@cluster0.xooqe.mongodb.net/project3?retryWrites=true&w=majority
