--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/hoffman1200/Project3#readme",
   "dependencies": {
+    "antd": "^4.6.2",
     "axios": "^0.20.0",
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
