--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "if-env": "^1.0.4",
     "mongoose": "^5.10.1",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   }
